# federated-language

./: .bazelrc  .gitignore  .readthedocs.yaml  BUILD  CHANGELOG.md  MODULE.bazel  README.md  fl.gwsq  pyproject.toml  requirements.in  requirements_lock_3_10.txt  requirements_lock_3_11.txt  requirements_lock_3_12.txt  requirements_lock_3_13.txt  requirements_lock_3_9.txt
.bcr/: metadata.template.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish.yaml  release.yaml  test_package.yaml  test_project.yaml
docs/: api.rst  conf.py  dependencies.md  federated_language.rst  index.md  index.rst  jax.dot  language.dot  language.md  overview.dot  overview.md  release.md  requirements.txt
docs/program/: components.dot  concepts.dot  guide.md  overview.md
examples/: BUILD  MODULE.bazel  computation.py  computation_test.py  execution_context.py  execution_context_test.py  python_computation.py  python_computation_test.py  requirements.in  requirements_lock.txt
examples/algorithm/: BUILD  program_logic.py  program_logic_test.py
examples/computation/: BUILD  python_computation.py  python_computation_test.py
examples/executor/: BUILD  execution_context.py  execution_context_test.py
examples/federated_platform/: BUILD  data_source.py  program_state_manager.py
examples/program/: BUILD  computations.py  integration_test.py  program.py
federated_language/: BUILD  version.py
federated_language/common_libs/: BUILD  golden.py  golden_test.py  py_typecheck.py  py_typecheck_test.py  retrying.py  retrying_test.py  structure.py  structure_test.py  tracing.py  tracing_test.py
federated_language/compiler/: BUILD  array.py  array_test.py  building_block_factory.py  building_block_factory_test.py  building_block_test_utils.py  building_blocks.py  building_blocks_test.py  computation_factory.py  computation_factory_test.py  intrinsic_defs.py  intrinsic_defs_test.py  transformation_utils.py  transformation_utils_test.py  tree_analysis.py  tree_analysis_test.py
federated_language/computation/: BUILD  computation_base.py  computation_impl.py  computation_impl_test.py  computation_serialization.py  (+7 more)
g3doc/: index.md  release.md
tools/: BUILD  BUILD.bazel  build_package.sh
(+88 files in other folders)
